--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,90 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-}
-
-.container{
-    width: 100%;
-    min-height: 100vh;
-    padding-left: 5%;
-    padding-right: 5%;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-    overflow: hidden;
     
 }
 
-.navbar{
+
+/*----------------------------------------------------Hero Section-------------------------------------------*/
+
+.hero-section
+{
     width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.logo_mark{
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    margin: 30px 0;
-}
-
-.menu{
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    margin: 30px 0;
-}
-
-nav{
-    flex: 1;
-    text-align: left;
-}
-
-nav ul li{
-    list-style: none;
-    display: inline-block;
-    margin-right: 20px;
-    margin-left: 10px;
-}
-
-nav ul li a{
-    text-decoration: none;
-    color: #000;
-    font-size: 14px;
-}
-
-nav ul li a:hover{
-    color: #cfcfcf;
+    min-height: 100vh;
+    
+    margin: auto;
+    box-sizing: border-box;
+    overflow: hidden;
+    
+   
 }
 
 .row{
+    margin-top: 3%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 100px 0;
 }
 
-.col-1{
+.hero-col-1{
+    background: #cfcfcf;
+    padding: 50px;
     flex-basis: 40%;
     position: relative;
     margin-left: 50px;
 }
 
-.col-1 h2{
-    font-size: 35px;
-    color: #353535;
-    font-weight: 120px;
-    margin: 20px 0 10px;
+.hero-col-2{
+    background: #cfcfcf;
+    flex-basis: 50%;
+    position: relative;
+
 }
 
-.col-1 h3{
-    font-size: 25px;
-    color: #cfcfcf;
-    font-weight: 75px;
-    margin: 10px 0 10px;
+
+/*----------------------------------------------------Stages Section-------------------------------------------*/
+
+
+.stages-section{
+    margin-top: 100px;
+    width: 100%;
+    min-height: 100vh;    
+    margin: auto;
+  /*  box-sizing: border-box;
+    overflow: hidden; */
+    text-align: center;
 }
 
-.col-1 p{
-    font-size: 15px;
-    color: #353535;
+.stage-col{
+    margin-left: 50px;
+    margin-right: 50px;
+    background: #cfcfcf;
+    flex-basis: 30%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px 15px;
+    box-sizing: border-box;
+}
+
+.stage-col img{
+    width: 150px;  
+   background: red;
     
+    
+}
 
+@media(max-width: 700px)
+{
+    .row{
+        flex-direction: column;
+    }
 }
