--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,13 @@
 .hero-section
 {
     width: 100%;
-    min-height: 100vh;
-    
+    min-height: 100vh;    
     margin: auto;
-    box-sizing: border-box;
-    overflow: hidden;
-    
-   
+    overflow: hidden;    
 }
 
 .row{
-    margin-top: 3%;
+    margin:100px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -51,11 +47,11 @@
 /*----------------------------------------------------Stages Section-------------------------------------------*/
 
 
-.stages-section{
-    margin-top: 100px;
+.stages-section{    
     width: 100%;
-    min-height: 100vh;    
+    min-height: 85vh;    
     margin: auto;
+    padding-top: 100px;
   /*  box-sizing: border-box;
     overflow: hidden; */
     text-align: center;
@@ -65,18 +61,21 @@
     margin-left: 50px;
     margin-right: 50px;
     background: #cfcfcf;
-    flex-basis: 30%;
 
+    padding: 20px 15px;
+    box-sizing: border-box;
+
+    flex-basis: 33%;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 20px 15px;
-    box-sizing: border-box;
+    
 }
 
 .stage-col img{
-    width: 150px;  
+   width: 150px;  
    background: red;
     
     
@@ -86,5 +85,46 @@
 {
     .row{
         flex-direction: column;
+    }
+}
+
+
+/*----------------------------------------------------Service Section-------------------------------------------*/
+
+.service-section{
+    width: 100%;
+    min-height: 100vh;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;   
+}
+
+.row-services{
+    margin:100px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.service-col{
+    margin-left: 50px;
+    margin-right: 50px;
+    flex-basis: 30%;
+    background: #cfcfcf;
+}
+
+.service-col img{
+    width: 100%;
+}
+
+@media(max-width: 700px)
+{
+    .row-services{
+        flex-direction: column;
+        margin: 20px 0;
+    }
+    .service-col{
+        margin-top: 20px;
+        
     }
 }
