--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,19 @@
     line-height: 1.5;
     box-sizing: border-box;
     overflow-x: hidden;
+     
     
     
 }
 
+/* body{
+    overflow-x: hidden;
+    position: absolute;
+} */
+/* .container-main{
+    overflow-x: hidden;
+    
+} */
 
 
 
@@ -77,7 +86,10 @@
     height: 100px;
     
     left: 19%;
-    bottom: 20%;
+    bottom: 20%; 
+
+    /* left: 287px;
+    bottom: 165px; */
     animation: spin 10s linear infinite;
 }
 
@@ -153,7 +165,11 @@
     
     left: 50%;
     top: -290px;
+    display: none;
+    
     }
+
+    
 }
 
 /*----------------------------------------------------Stages Section-------------------------------------------*/
@@ -172,7 +188,7 @@
 .stage-col{
     margin-left: 50px;
     margin-right: 50px;
-    background: #cfcfcf;
+    /*background: #cfcfcf;*/
 
     padding: 20px 15px;
     box-sizing: border-box;
@@ -188,7 +204,7 @@
 
 .stage-col img{
    width: 150px;  
-   background: red;
+   /*background: red;*/
     
     
 }
@@ -222,7 +238,7 @@
     margin-left: 10px;
     margin-right: 10px;
     flex-basis: 30%;
-    background: #cfcfcf;
+    /*background: #cfcfcf;*/
 }
 
 .service-col img{
@@ -240,3 +256,118 @@
         
     }
 }
+
+
+
+/*----------------------------------------------------Volunteer Section-------------------------------------------*/
+
+.volunteer-section{
+    width: 100%;
+    min-height: 100vh;
+    margin: auto;
+    padding-top: 100px;
+   
+    background: #353535; 
+}
+
+.row-volunteer{
+    margin:100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.volunteer-col-1{
+    
+    flex-basis: 40%;
+}
+
+/*----------------------------------------------------Volunteer Form-------------------------------------------*/
+
+.volunteer-form{
+    width: 100%;
+    padding: 40px;
+    background: #353535;
+}
+
+.volunteer-form h2{
+    font-size: 25px;
+    font-weight: 400;
+    color: #cfcfcf;
+}
+
+.volunteer-form .input-box{
+    position: relative;
+    width: 100%;
+    margin-top: 12px;
+    background: #353535;
+}
+
+.form-control{
+    fill: none;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #cfcfcf;
+}
+
+.volunteer-form .input-box input,
+.volunteer-form .input-box textarea{
+    width: 100%;
+    padding: 5px 0;
+    font-size: 14px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2.5px solid #cfcfcf;
+    outline: none;
+    resize: none;
+}
+
+.volunteer-form .input-box span{
+    position: absolute;
+    left: 0;
+
+    padding: 5px 0;
+    font-size: 14px;
+    margin: 10px 0;
+
+    pointer-events: none;
+    transition: 0.7s;
+    color: #cfcfcf;
+}
+
+
+.volunteer-form ,.input-box input:focus ~ span,
+.volunteer-form ,.input-box input:valid ~ span,
+.volunteer-form ,.input-box textarea:focus ~ span,
+.volunteer-form ,.input-box textarea:valid ~ span{
+    color: teal;
+    font-size: 12px;
+    transform: translateY(-20px);
+}
+
+.volunteer-form .input-box input[type=submit]
+{
+    width: 100px;
+    background: black;
+    color: aliceblue;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+
+@media(max-width: 700px)
+{
+    .volunteer-form{
+        width: 100%;
+        padding: 10px;
+    }
+    .row-volunteer{
+        flex-direction: column;
+    }
+    .volunteer-col-1{
+    
+        flex-basis: 80%;
+    }
+}
+
