sign-in, sign-up, update, delete

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@
         margin-left: 1px;       
         margin-top: 150px;
     }
+    .hero-section{
+        width: 80%;
+    }
 }
 
 
@@ -397,7 +400,7 @@
     }
 }
 
-/*----------------------------------------------------sign-in-section-------------------------------------------*/
+/*----------------------------------------------------sign-in-up-section-------------------------------------------*/
 
 
 .sign-in-section
