--- a/css/style.css
+++ b/css/style.css
@@ -238,12 +238,13 @@
     width: 80%;
     min-height: 100vh;
     margin: auto;
+    margin-bottom: 100px;
     padding-top: 100px;
     text-align: center;   
 }
 
 .row-services{
-    margin:100px 0;
+    margin:50px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -271,6 +272,8 @@
         
     }
 }
+
+
 
 
 
@@ -501,3 +504,7 @@
 
     
 }
+
+
+
+
