--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,18 @@
     
 }
 
+/*-----------------------------------------------------------Slide-in Transition------------------------------------------------- */
 
+.slide-in{
+    position: relative;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: all 1s ease;
+}
+
+.slide-in.active{
+    transform: translateY(0px);
+    opacity: 1;
+}
 
 
