--- a/css/style.css
+++ b/css/style.css
@@ -520,3 +520,15 @@
 }
 
 
+/*----------------------------------------------------------Testimonial Section-------------------------------------------------*/
+.testimonial-section{
+    width: 100%;
+    min-height: 100vh;
+    /*margin: auto;*/
+    padding-top: 100px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
