--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     box-sizing: border-box;
-    overflow-x: hidden;
-     
+    overflow-x: hidden;   
     
     
 }
@@ -530,5 +529,72 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.slider{
+    display: block;
+    height: 100%;
+    width: 700px;
+    /*max-width: 700px;*/
+    margin: 0 auto;
+    position: relative;
+}
+
+.slide{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.slide-img{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 40px;
+
+    background-image: url("../assets/images/d11.svg");
+    background-position:center;
+	background-repeat: no-repeat;
+	background-size: contain;
+
+}
+
+.slide-img img{
+    height: 100%;
+    width: 300px;
+    border-radius: 50%;
+}
+
+
+.testimonial{
+    padding-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.testimonial p{
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 1.5;
+
+}
+
+.client{
+    margin-top: 20px;
+    color: #353535;
+    font-size: .5rem;
+    font-weight: 700;
+}
+
+.client span{
+    color: #cfcfcf;
+    font-weight: 500;
+    display: block;
 }
 
