--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@
     margin-top: 150px;
 }
 
+.hero-col-1 h3{
+    color: #353535;
+    font-size: 35px;
+}
+
+
+
 
 @media(max-width: 700px)
 {
@@ -70,6 +77,10 @@
     }
     .hero-section{
         width: 80%;
+    }
+    .hero-col-1 h3{
+        color: #353535;
+        font-size: 25px;
     }
 }
 
@@ -570,7 +581,7 @@
 
 
 .testimonial{
-    padding-top: 30px;
+    padding-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -586,7 +597,7 @@
 }
 
 .client{
-    margin-top: 20px;
+    margin-top: 10px;
     color: #353535;
     font-size: .5rem;
     font-weight: 700;
@@ -598,3 +609,17 @@
     display: block;
 }
 
+@media(max-width: 700px)
+{
+    .testimonial-section{
+        padding: 40px;
+    }
+    .slide-img img{
+        height: 100%;
+        width: 150px;
+        border-radius: 50%;
+    }
+    .testimonial p{
+        font-size: 10px;
+    }
+}
