--- a/css/style.css
+++ b/css/style.css
@@ -623,3 +623,56 @@
         font-size: 10px;
     }
 }
+
+
+
+/*-----------------------------------------------------------------Section Volunteers Page---------------------------------------------*/
+
+.volunteers
+{
+    width: 100%;
+    min-height: 100vh;
+    /*margin: auto;*/
+    padding-top: 100px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sub{
+    display: block;
+    height: 100%;
+    width: 700px;
+    /*max-width: 700px;*/
+    margin: 0 auto;
+    position: relative;
+}
+
+.details{
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.volunteer_image{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 40px;
+
+    background-image: url("../assets/images/d11.svg");
+    background-position:center;
+	background-repeat: no-repeat;
+	background-size: contain;
+
+}
+
+.volunteer_image img{
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+}
