--- a/css/style.css
+++ b/css/style.css
@@ -640,7 +640,7 @@
     justify-content: center;
 }
 
-.sub{
+.sub_1{
     display: block;
     height: 100%;
     width: 700px;
@@ -649,12 +649,21 @@
     position: relative;
 }
 
+.sub_2{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .details{
     padding-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
 
 }
 
