--- a/css/style.css
+++ b/css/style.css
@@ -626,62 +626,61 @@
 
 
 
-/*-----------------------------------------------------------------Section Volunteers Page---------------------------------------------*/
+/*-------------------------------------------------------domain section----------------------------------------------------*/
 
-.volunteers
-{
-    width: 100%;
-    min-height: 100vh;
-    /*margin: auto;*/
-    padding-top: 100px;
+.domain{
 
+}
+
+.domain-row{
+    width: 80%;
+    margin: auto;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-items: center;
     justify-content: center;
 }
 
-.sub_1{
-    display: block;
-    height: 100%;
-    width: 700px;
-    /*max-width: 700px;*/
-    margin: 0 auto;
-    position: relative;
+.volunteer_card{
+    background-color: #cfcfcf;
+    width: 300px;
+    height:500px;
+    margin: 20px 10px 10px 10px;
 }
 
-.sub_2{
+.volunteer_content{
+    padding: 10px;
+}
+
+.volunteer_img{
+    text-align: center;
+    
+}
+.volunteer_img img{
     width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
+    height: 300px;
+    border-radius: 5px;
+}
+
+.volunteer_desc{
     text-align: center;
 }
 
-.details{
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column-reverse;
-
+.btn-div{
+    text-align: center;
 }
 
-.volunteer_image{
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 40px;
-
-    background-image: url("../assets/images/d11.svg");
-    background-position:center;
-	background-repeat: no-repeat;
-	background-size: contain;
-
-}
-
-.volunteer_image img{
-    height: 300px;
-    width: 300px;
-    border-radius: 100%;
+.btn
+{
+    background-color: #353535;
+    color: #cfcfcf;
+    width: 200px;
+    cursor: pointer;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 600px;
+    border-radius: 5px;
+    outline: none;
+    text-transform: uppercase;
 }
