--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@
 }
 
 .volunteer_card{
-    background-color: #cfcfcf;
+    background-color: #eeeeee;
     width: 300px;
     height:500px;
     margin: 20px 10px 10px 10px;
