--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,16 @@ padding-top: 100px;
     padding: 10px;
 }
 
+.volunteer_desc h3{
+    
+    margin-bottom: 10px;
+}
+
+.volunteer_desc p{
+    color: #b3b3b3;
+}
+
+
 .btn-div{
     text-align: center;
 }
