--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,43 @@
 
 
 
+
+/*----------------------------------------------------Nav Bar-------------------------------------------*/
+
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav img{
+    width: 50px;
+
+}
+
+.nav-links{
+    flex: 1;
+    text-align: right;
+
+}
+
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 12px;
+    position: relative;
+
+}
+
+.nav-links ul li a{
+    color: #cfcfcf;
+    text-decoration: none;
+    font-size: 15px;
+    
+}
+
 /*----------------------------------------------------Hero Section-------------------------------------------*/
-
-
 
 .hero-section
 {
@@ -49,7 +83,7 @@
     flex-basis: 40%;
     position: relative;
     margin-left: 50px;
-    margin-top: 150px;
+    margin-top: 45px;
 }
 
 .hero-col-1 h3{
@@ -761,7 +795,48 @@ padding-top: 100px;
     }
 }
 
+/*----------------------------------------------------Footer Links-------------------------------------------*/
 
+
+
+
+.footer-links{
+    
+    text-align: right;
+
+}
+
+.footer-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 12px;
+    position: relative;
+
+}
+
+.footer-links ul li a{
+    color: #cfcfcf;
+    text-decoration: none;
+    font-size: 15px;
+    
+}
+
+@media(max-width: 700px)
+{
+    .footer-links ul li
+    {
+        display: block;
+        
+    }
+    .footer-links{
+    
+        text-align: center;
+           
+    }
+    .footer-title{
+        margin-bottom: 20px;
+    }
+}
 
 
 
