--- a/css/style.css
+++ b/css/style.css
@@ -23,29 +23,28 @@
 } */
 
 
-
-
 /*----------------------------------------------------Nav Bar-------------------------------------------*/
 
-nav{
+.nav-section{
+    width: 100%;
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
 }
 
-nav img{
+.nav-section img{
     width: 50px;
 
 }
 
-.nav-links{
+.nav-section .nav-links{
     flex: 1;
     text-align: right;
 
 }
 
-.nav-links ul li{
+.nav-section .nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 10px 12px;
@@ -53,7 +52,7 @@ nav img{
 
 }
 
-.nav-links ul li a{
+.nav-section .nav-links ul li a{
     color: #cfcfcf;
     text-decoration: none;
     font-size: 15px;
