--- a/css/style2.css
+++ b/css/style2.css
@@ -34,7 +34,7 @@ nav img{
 }
 
 .nav-links ul li a{
-    color: #353535;
+    color: #cfcfcf;
     text-decoration: none;
     font-size: 13px;
 }
@@ -203,4 +203,102 @@ nav img{
     }
 
     
+}
+
+
+/*----------------------------------------------------Stages Section-------------------------------------------*/
+
+
+.stages-section{    
+    width: 80%;
+    min-height: 85vh;    
+    margin: auto;
+    padding-top: 100px;
+  /*  box-sizing: border-box;
+    overflow: hidden; */
+    text-align: center;
+}
+
+.stage-col{
+    margin-left: 50px;
+    margin-right: 50px;
+    /*background: #cfcfcf;*/
+
+    padding: 20px 15px;
+    box-sizing: border-box;
+
+    flex-basis: 33%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.stage-col img{
+   width: 150px; 
+   
+   transition: 0.5s;
+   animation: top-bounce 2s ease-in-out infinite;
+   /*background: red;*/
+    
+    
+}
+@keyframes top-bounce{
+    0%, 100%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(5px);
+    }
+}
+
+@media(max-width: 700px)
+{
+    .row{
+        flex-direction: column;
+    }
+}
+
+
+/*----------------------------------------------------Service Section-------------------------------------------*/
+
+.service-section{
+    width: 80%;
+    min-height: 100vh;
+    margin: auto;
+    margin-bottom: 100px;
+    padding-top: 100px;
+    text-align: center;   
+}
+
+.row-services{
+    margin:50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.service-col{
+    margin-left: 10px;
+    margin-right: 10px;
+    flex-basis: 30%;
+    /*background: #cfcfcf;*/
+}
+
+.service-col img{
+    width: 100%;
+}
+
+@media(max-width: 700px)
+{
+    .row-services{
+        flex-direction: column;
+        margin: 20px 0;
+    }
+    .service-col{
+        margin-top: 20px;
+        
+    }
 }
