--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 }
 
 .nav-section img{
-    width: 50px;
+    display: none;
 
 }
 
@@ -57,6 +57,42 @@
     text-decoration: none;
     font-size: 15px;
     
+}
+
+@media(max-width: 700px){
+    
+    
+    .nav-section .nav-links{        
+        text-align: left;
+    
+    }
+    .nav-links ul li{
+        display: block;    
+    }
+    
+    .nav-links{
+        position: absolute;
+        background: #353535;
+        height: 100vh;
+        width: 150px;
+        top: 0;
+        left: 0px;
+        text-align: center;
+        z-index: 2;
+        transition: 1s;
+    
+    }
+
+    .nav-section img{
+        display: block;        
+        margin:10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+
+    .nav-links ul{
+        padding: 30px;
+    }
 }
 
 /*----------------------------------------------------Hero Section-------------------------------------------*/
@@ -100,13 +136,12 @@
         margin-top: 10px;
     }
 
-    .hero-col-1{
-        
+    .hero-col-1{        
         padding: 20px;
         flex-basis: 40%;
         position: relative; 
         margin-left: 1px;       
-        margin-top: 150px;
+        margin-top: 35px;
     }
     .hero-section{
         width: 80%;
@@ -271,6 +306,10 @@
 {
     .row{
         flex-direction: column;
+    }
+    .stage-col img
+    {
+        width: 90px;
     }
 }
 
