--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,25 @@
     border-bottom: 1px solid #3d3d3d;
 }
 
+.selection{
+    margin-top: 12px;
+}
+
+.selection-control
+{
+    fill: none;
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    color: #cfcfcf;
+    border-bottom: 2.5px solid #cfcfcf;
+
+    
+    padding: 5px 0;
+    font-size: 14px;
+    margin: 10px 0;
+}
+
 .volunteer-form .input-box input,
 .volunteer-form .input-box textarea{
     width: 100%;
