--- a/css/style.css
+++ b/css/style.css
@@ -763,10 +763,14 @@ textarea:focus, input:focus {
 
 .domain{
 padding-top: 50px;
+padding-bottom: 50px;
+
 min-height: 100vh;
 }
 
 .domain-row{
+    padding-bottom: 50px;
+
     width: 80%;
     margin: auto;
     display: flex;
@@ -782,7 +786,7 @@ min-height: 100vh;
     color: #cfcfcf;
     width: 300px;
     height:460px;
-    margin: 20px 20px 20px 10px;
+    margin: 20px 15px 20px 15px;
 }
 
 .volunteer_content{
