organising the code

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@
 }
 
 
-/*------------------------------------------------------------Elements--------------------------------------------*/
+/*------------------------------------------------------------Elements--------------------------------------------------------------------------*/
 
 .element-main .element{
     
@@ -314,7 +314,7 @@
 }
 
 
-/*----------------------------------------------------Service Section-------------------------------------------*/
+/*--------------------------------------------------------------------Service Section----------------------------------------------------------*/
 
 .service-section{
     width: 80%;
@@ -345,6 +345,10 @@
 
 @media(max-width: 700px)
 {
+    .service-section
+    {
+        padding-top: 50px;
+    }
     .row-services{
         flex-direction: column;
         margin: 20px 0;
@@ -359,7 +363,7 @@
 
 
 
-/*----------------------------------------------------Volunteer Section-------------------------------------------*/
+/*-------------------------------------------------------------------Volunteer Section----------------------------------------------------------*/
 
 .volunteer-section{
     width: 100%;
@@ -397,7 +401,7 @@
     /* margin-bottom: 10px; */
 }
 
-/*----------------------------------------------------Volunteer Form-------------------------------------------*/
+/*-------------------------------------------------------------------Volunteer Form------------------------------------------------------------*/
 
 .volunteer-form{
     width: 100%;
@@ -494,6 +498,10 @@ textarea:focus, input:focus {
     color: #cfcfcf;
 }
 
+input{
+    color: #cfcfcf;
+}
+
 
 .upload-img
 {
@@ -527,7 +535,7 @@ textarea:focus, input:focus {
     }
 }
 
-/*----------------------------------------------------sign-in-up-section-------------------------------------------*/
+/*--------------------------------------------------------------------sign-in-up-section-------------------------------------------------------*/
 
 
 .sign-in-section
@@ -658,7 +666,7 @@ textarea:focus, input:focus {
 }
 
 
-/*----------------------------------------------------------Testimonial Section-------------------------------------------------*/
+/*---------------------------------------------------------------------Testimonial Section----------------------------------------------------*/
 .testimonial-section{
     width: 100%;
     min-height: 100vh;
@@ -868,7 +876,7 @@ min-height: 100vh;
     }
 }
 
-/*----------------------------------------------------Footer Links-------------------------------------------*/
+/*----------------------------------------------------------------------Footer Links-----------------------------------------------------------*/
 
 
 
